refactor: convert switch expressions to traditional switch statements for Java 11
Converted all Java 14+ switch expressions (arrow-case syntax) to Java 11 compatible
traditional switch statements with colons and break statements.

Files modified:
- CheckSum.java: converted equals() switch expression with pattern matching to if/else
- DeviceInfoDialog.java: getLocalizedState() switch expression
- SnifferLifecycleManager.java: getRestartDelayMs() and VolumeStateChangedEvent handler
- VolumeListPanel.java: getLocalizedState() switch expression
- EventPanel.java: getColumnName() and getValueAt() switch expressions
- FileHistoryPanel.java: getColumnName() and getValueAt() switch expressions
- I18nManager.java: parseLocale() switch expression with Locale constructor (Java 11)
- WelcomeDialog.java: getFeatureIcon() switch expression
- LogWindow.java: getStyleForLevel() and isLevelVisible() switch expressions
- LogPanel.java: getValueAt() and getLevelColor() switch expressions
- BasicFileFilter.java: calculateCutoffTime() switch expression
- FilterConfigDialog.java: time unit and mode index switch expressions
- SnifferDebugDialog.java: refresh(), matchesFilter(), and state color switch expressions
- PriorityRule.java: calculatePriority() type pattern switch converted to if/else
- FileSelector.java: selectAuto() switch expression
- ThemeManager.java: getStateColor() and applyTheme() switch expressions
- StorageManagementPanel.java: strategy combo box, status text, progress bar color switches
- TrayIconManager.java: state color and symbol switch expressions
- RecyclerService.java: storage level action and strategy selection switches

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>